# agent-openai-agents-sdk_2026_02_23-05_14

./: AGENT_PREVIEW.md  COMPLIANCE_GDPR_CHECKLIST.md  DESIGN_COPILOT_AGENT.md  EVALUATION_METRICS.md  PREVIEW.html  SETUP_AND_LAUNCH.md  TECHNICAL_DECISIONS.md  manifest.mf
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/: .env.example  AGENTS.md  API.md  CHECKLIST.md  COMMANDS.md  Dockerfile.api  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  setup.py  setup.sh  setup_and_launch.py  standalone_server.py  verify_setup.py
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/.devcontainer/: devcontainer.json
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/.github/: PULL_REQUEST_TEMPLATE.md
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/.github/workflows/: ci.yml
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/agent_server/: agent.py  evaluate_agent.py  memory_store.py  start_server.py  utils.py
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/agents/perfect_agent/: runner.py  system_prompt.txt
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/api/: __init__.py  perfect_agent_api.py
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/charts/perfect-agent/: Chart.yaml  values.yaml
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/charts/perfect-agent/templates/: deployment-api.yaml  deployment-ui.yaml  service-api.yaml  (+1 more)
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/cli/: perfect-agent
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/e2e-chatbot-app-next/: package-lock.json  package.json  tsconfig.json
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/e2e-chatbot-app-next/client/: package.json  tsconfig.json
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/e2e-chatbot-app-next/server/: tsconfig.json
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/local_agents/: __init__.py
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/local_agents/perfect_agent/: __init__.py  fallback_client.py  runner.py
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/scripts/: demo_up.sh  onboard_codespaces.sh
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/sdk/: __init__.py  registry.py
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/templates/: AGENT_IMPLEMENTATION_TEMPLATE.py  app.yaml.template
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/tests/: test_api_perfect_agent.py  test_perfect_agent_integration.py  test_smoke_endpoints.py
agent-openai-agents-sdk_2026_02_23-05_14/agent-openai-agents-sdk/ui/: __init__.py  perfect_agent_gradio.py
(+18 files in other folders)
